fixed title, text fonts and updated letter spacing

--- a/main.css
+++ b/main.css
@@ -1,31 +1,30 @@
 * {
- 
   margin: 0;
   padding: 0;
   font-family: Inter, sans-serif;
 }
 
 .title {
-  letter-spacing: -1px;
+  letter-spacing: -1.1px;
   padding: 24px;
-  font-size: 23px;
+  font-size: 24px;
   color: #1d1d21;
   border-top-width: 0px;
   border-right-width: 0px;
   border-left-width: 0px;
-  border-bottom-width: 1px;
-  border-color: rgba(0, 0, 0, 0.05);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   border-style: solid;
   font-weight: 700;
   padding-left: 30px;
 }
 .services {
+  letter-spacing: 0px;
   font-weight: 400;
   float: right;
   display: flex;
   background: none;
   font-size: 16px;
-  border: none;
+
   padding-top: 5px;
   padding-bottom: 10px;
   padding-right: 60px;
@@ -35,12 +34,13 @@
   color: #e76385;
 }
 .work {
+  letter-spacing: 0px;
   font-weight: 400;
   float: right;
   display: flex;
   background: none;
   font-size: 16px;
-  border: none;
+
   padding-top: 5px;
   padding-bottom: 10px;
   padding-right: 60px;
@@ -50,12 +50,13 @@
   color: #e76385;
 }
 .about {
+  letter-spacing: 0px;
   font-weight: 400;
   float: right;
   display: flex;
   background: none;
   font-size: 16px;
-  border: none;
+
   padding-top: 5px;
   padding-bottom: 10px;
   padding-right: 60px;
@@ -66,6 +67,7 @@
   color: #e76385;
 }
 .contact {
+  letter-spacing: 0px;
   font-weight: 400;
   float: right;
   display: flex;
@@ -104,9 +106,9 @@
 }
 
 .text {
-  letter-spacing: -3.5px;
+  letter-spacing: -1.8px;
   color: #4f4f4f;
-  font-weight: 200;
+  font-weight: 300;
   display: flex;
   justify-content: space-around;
   font-size: 50px;
